--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/timatrue/dancemap/issues"
   },
-  "homepage": "https://github.com/timatrue/dancemap#readme"
+  "homepage": "https://github.com/timatrue/dancemap#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongodb": "^3.4.1"
+  }
 }
