--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongodb": "^3.4.1"
+    "mongodb": "^3.4.1",
+    "socket.io": "^2.3.0"
   }
 }
