--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.4.1",
+    "mongoose": "^5.8.3",
     "socket.io": "^2.3.0"
   }
 }
