--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.3",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "supercluster": "^7.0.0"
   }
 }
