--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
+    "express-sitemap-xml": "^1.1.0",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.3",
     "save": "^2.4.0",
