--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.3",
     "save": "^2.4.0",
+    "serve-favicon": "^2.5.0",
     "socket.io": "^2.3.0",
     "supercluster": "^7.0.0",
     "telegraf": "^3.36.0"
