--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/timatrue/dancemap#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dayjs": "^1.8.27",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "express-sitemap-xml": "^1.1.0",
