--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "express-sitemap-xml": "^1.1.0",
     "formidable": "^1.2.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.3",
     "save": "^2.4.0",
