--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "telegraf": "^3.36.0"
   },
   "devDependencies": {
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
+    "firebase-admin": "^8.12.1",
     "nodemon": "^2.0.4"
   }
 }
